[gd_scene load_steps=15 format=3 uid="uid://ttlqusqk5kq1"]

[ext_resource type="Script" uid="uid://dbqoh827ja11x" path="res://scripts/home_screen.gd" id="1_tjifo"]
[ext_resource type="Texture2D" uid="uid://cvbmocbsrul8d" path="res://assets/Background_2.png" id="2_bie51"]
[ext_resource type="FontFile" uid="uid://b2dj0wvhrnjk" path="res://fonts/04B_30__.TTF" id="3_ih2x6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ked1l"]
texture = ExtResource("2_bie51")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b02wa"]
bg_color = Color(0.288794, 0.627584, 0.896699, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15ihl"]
bg_color = Color(0.0961951, 0.202263, 0.504421, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_airqx"]
bg_color = Color(0.199647, 0.366925, 0.79606, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ii2s2"]
bg_color = Color(0.106145, 0.205515, 0.491741, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tjifo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bie51"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ih2x6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ked1l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b02wa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15ihl"]

[node name="home_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tjifo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 657.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ked1l")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -599.0
offset_top = -293.0
offset_right = 599.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_ih2x6")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_b02wa")
text = "Stop Being a Weenie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -2.5
offset_right = 205.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ih2x6")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_15ihl")
theme_override_styles/normal = SubResource("StyleBoxFlat_airqx")
text = "Play"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = 160.5
offset_right = 205.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ih2x6")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_15ihl")
theme_override_styles/normal = SubResource("StyleBoxFlat_airqx")
text = "How To Play"

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.0
offset_top = -244.0
offset_right = 485.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ii2s2")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -598.5
offset_top = -224.5
offset_right = 599.5
offset_bottom = -102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_ih2x6")
theme_override_font_sizes/normal_font_size = 50
text = "How To Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -461.5
offset_top = -116.5
offset_right = 472.5
offset_bottom = 224.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_ih2x6")
theme_override_font_sizes/normal_font_size = 21
text = "The goal of the game is to find a certain number of hotdogs and eat them. Each level will contain a different amount of hotdogs, and will have a bigger map to make each level progressively more difficult.

To move, You can use either WASD Buttons (W for Jump, A for left, and D for Right) or Arrow buttons (Up for Jump, Left arrow for moving left, and Right Arrow for moving right. 

At later levels, there will be signs that can be interacted with to tell you something about the level. You can press E to interact with those signs. If you get stuck at any point, press R to restart the level. You lose progress when you do, though."
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="ButtonX" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.5
offset_top = 17.5
offset_right = -11.5
offset_bottom = 79.5
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_ih2x6")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_tjifo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bie51")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ih2x6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ked1l")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_b02wa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_15ihl")
text = "X"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Panel/ButtonX" to="." method="_on_button_x_pressed"]
